# serializer version: 1
# name: test_sensor
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Information provided by the OpenSky Network (https://opensky-network.org)',
      'friendly_name': 'OpenSky',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'flights',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.opensky',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2',
  })
# ---
# name: test_sensor_altitude
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Information provided by the OpenSky Network (https://opensky-network.org)',
      'friendly_name': 'OpenSky',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'flights',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.opensky',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_sensor_updating
  list([
  ])
# ---
# name: test_sensor_updating.1
  list([
  ])
# ---
